@@ -1,3 +1,4 @@
+ - Add remove functionality for parameter sets
  - Added out typemap for vector of shared_ptr objects
  - Fix typemap bug for list of shared_ptr objects
  - Support parallel XML vector io
